# sso

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  admin.html  docker-compose.raft.yml  docker-compose.yml  login.html  nginx-lb.conf  nginx.conf  node1.toml  node2.toml  node3.toml  sso.ini  sso.toml  sso.toml.example  supervisord.conf
.githooks/: pre-commit
.github/workflows/: ci.yml
docker-raft/: node1.toml  node2.toml  node3.toml
docs/: api-documentation.md  architecture.md  design.md  openapi.yaml  swagger-ui.html  user-manual.md
docs/superpowers/plans/: 2026-06-15-mfa-refresh-tokens.md  2026-06-15-oauth-multi-client.md  2026-06-16-admin-frontend-refactor.md  2026-06-16-complete-postgres-storage.md  2026-06-16-decoupled-frontend.md  2026-06-16-postgres-backend.md
docs/superpowers/specs/: 2026-06-15-mfa-refresh-tokens-design.md  2026-06-15-oauth-multi-client-design.md  2026-06-16-admin-frontend-refactor-design.md  2026-06-16-decoupled-ui-postgres-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  i18n.ts  main.ts  style.css
frontend/src/components/admin/: AppManagement.vue  AuditLogViewer.vue  Dashboard.vue  GroupManagement.vue  PolicyManagement.vue  PolicySimulator.vue  RoleManagement.vue  UserManagement.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/views/: Admin.vue  Login.vue  Portal.vue
gogs/conf/: app.ini
include/: arena.h  config.h  dpop.h  group.h  handlers.h  intern.h  logger.h  mfa.h  oauth.h  otlp.h  permission.h  policy.h  raft_cluster.h  raft_rpc.h  ratelimit.h  risk.h  role.h  server.h  sso.h  storage.h  token.h  user.h  wasm_plugin.h  webauthn.h
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml
scripts/: gen_raft_proxy.py  test_raft_cluster.sh
sql/postgres/: schema.sql  seed.sql
sql/sqlite/: schema.sql  seed.sql
src/: admin_page.h  arena.c  cJSON.c  config.c  demo.c  dpop.c  group.c  handlers_admin.c  handlers_auth.c  handlers_check.c  handlers_common.c  handlers_pages.c  handlers_webauthn.c  interactive.c  intern.c  logger.c  login_page.h  main.c  mfa.c  oauth.c  otlp.c  permission.c  policy.c  raft_cluster.c  raft_generated.inc  raft_rpc.c  ratelimit.c  risk.c  role.c  server.c  server_mhd.c  sso.c  storage_memory.c  storage_postgres.c  storage_redis.c  storage_sqlite.c  token.c  toml.c  user.c  wasm_plugin.c  (+1 more)
strategies/: abac_perm.c  api_perm.c  data_perm.c  func_perm.c  lbac_perm.c  loc_perm.c  rbac_perm.c
tests/: bench_permission.c  minunit.h  test_config.c  test_dpop.c  test_group.c  test_http_api.c  test_integration.sh  test_mfa.c  test_policy.c  test_ratelimit.c  test_role.c  test_server.c  test_storage.c  test_token.c  test_user.c
